TodoApp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-namespace
  name: dwk-todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-todoapp
  template:
    metadata:
      labels:
        app: dwk-todoapp
    spec:
      volumes:
        - name: todoapp-volume
          persistentVolumeClaim:
            claimName: todoapp-volume-claim
      containers:
        - name: dwk-todoapp-frontend
          image: FRONTEND-IMAGE
          volumeMounts:
          - name: todoapp-volume
            mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "100m"
              memory: "150Mi"
        - name: dwk-todoapp-backend
          image: BACKEND-IMAGE
          volumeMounts:
          - name: todoapp-volume
            mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "100m"
              memory: "150Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /
               port: 9003
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
               path: /
               port: 9003
