TodoApp/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: todo-namespace
  name: dwk-todoapp-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: dwk-todoapp
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: dwk-todoapp
    spec:
      volumes:
        - name: todoapp-volume
          persistentVolumeClaim:
            claimName: todoapp-volume-claim
      containers:
        - name: dwk-todoapp-frontend
          image: FRONTEND-IMAGE
          volumeMounts:
          - name: todoapp-volume
            mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "100m"
              memory: "150Mi"
        - name: dwk-todoapp-backend
          image: BACKEND-IMAGE
          volumeMounts:
          - name: todoapp-volume
            mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "100m"
              memory: "150Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /
               port: 9003
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
               path: /
               port: 9003
        - name: dwk-todoapp-broadcaster
          image: BROADCASTER-IMAGE
          resources:
            limits:
              cpu: "100m"
              memory: "150Mi"
