TodoApp/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-namespace
  name: dwk-todoapp-backend-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-todoapp
  ports:
    - port: 10003
      protocol: TCP
      targetPort: 9003
