TodoApp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-todoapp-svc
spec:
  type: NodePort
  selector:
    app: dwk-todoapp 
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 8080
